[tool.poetry]
name = "sharepp"
version = "1.1.0"
description = "Library for getting ETF and cryptocurrency prices."
authors = ["Lukas Brauckmann <lukas.brauckmann@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sharepp = 'sharepp.cmd:run'
