[tool.poetry]
name = "sharepp"
version = "1.0.1"
description = "Library for getting current prices of stocks, ETFs and cryptocurrency."
repository = "https://github.com/Plebo13/sharepp"
authors = ["Lukas Brauckmann <lukas.brauckmann@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
